--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 <div class="row">
     <div class="col-xs-2"></div>
+    <div class="col-xs-8 text-center"><h1>Изменный WORLD Hello</h1></div>
     <div class="col-xs-2"></div>
 </div>
 <div class="row">
